fix: fix collapsed vertical tabs positioning
Closes #1055
Closes #1053
Closes #1035

--- a/theme/parts/sidebar.css
+++ b/theme/parts/sidebar.css
@@ -6,26 +6,18 @@
 #sidebar-main {
 	--button-size-icon: var(--gnome-button-size) !important;
 	background-color: var(--gnome-sidebar-background) !important;
-
-	&:not([sidebar-launcher-expanded]) {
-		#tabbrowser-tabs[orient="vertical"] {
-			& .tab-background {
-				margin-inline: calc(var(--tab-inner-inline-margin) / 2) !important;
-			}
-
-			& .tab-content {
-				padding: 0 calc(var(--tab-inner-inline-margin) * 1.3) !important;
-			}
-		}
-	}
 }
 
 link[href="chrome://browser/content/sidebar/sidebar-main.css"] + .wrapper {
 	.buttons-wrapper {
 		justify-content: center !important;
 		min-height: calc(var(--gnome-button-size) + (var(--gnome-toolbar-padding) * 2)) !important;
+
+		@media -moz-pref("sidebar.visibility", "expand-on-hover") {
+			padding-block-end: 0 !important;
+		}
 	}
-	
+
 	.tools-and-extensions {		
 		&[orientation="horizontal"] {
 			padding: var(--gnome-toolbar-padding) !important;
@@ -37,7 +29,7 @@ link[href="chrome://browser/content/sidebar/sidebar-main.css"] + .wrapper {
 			--button-outer-padding-inline: var(--gnome-toolbar-padding) !important;
 			--button-outer-padding-block: calc(var(--gnome-toolbar-spacing) / 2) !important;
 			--toolbarbutton-active-background: var(--gnome-selected-color) !important;
-			
+
 			&:last-of-type {
 				--button-outer-padding-block-end: var(--gnome-toolbar-padding) !important;
 			}
